; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_st5481_usb.c_st5481_release_usb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_st5481_usb.c_st5481_release_usb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st5481_adapter = type { %struct.st5481_ctrl, %struct.st5481_intr }
%struct.st5481_ctrl = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }
%struct.st5481_intr = type { %struct.TYPE_3__* }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @st5481_release_usb(%struct.st5481_adapter* %0) #0 {
  %2 = alloca %struct.st5481_adapter*, align 8
  %3 = alloca %struct.st5481_intr*, align 8
  %4 = alloca %struct.st5481_ctrl*, align 8
  store %struct.st5481_adapter* %0, %struct.st5481_adapter** %2, align 8
  %5 = load %struct.st5481_adapter*, %struct.st5481_adapter** %2, align 8
  %6 = getelementptr inbounds %struct.st5481_adapter, %struct.st5481_adapter* %5, i32 0, i32 1
  store %struct.st5481_intr* %6, %struct.st5481_intr** %3, align 8
  %7 = load %struct.st5481_adapter*, %struct.st5481_adapter** %2, align 8
  %8 = getelementptr inbounds %struct.st5481_adapter, %struct.st5481_adapter* %7, i32 0, i32 0
  store %struct.st5481_ctrl* %8, %struct.st5481_ctrl** %4, align 8
  %9 = call i32 @DBG(i32 1, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  %10 = load %struct.st5481_ctrl*, %struct.st5481_ctrl** %4, align 8
  %11 = getelementptr inbounds %struct.st5481_ctrl, %struct.st5481_ctrl* %10, i32 0, i32 0
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = call i32 @usb_kill_urb(%struct.TYPE_3__* %12)
  %14 = load %struct.st5481_ctrl*, %struct.st5481_ctrl** %4, align 8
  %15 = getelementptr inbounds %struct.st5481_ctrl, %struct.st5481_ctrl* %14, i32 0, i32 0
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @kfree(i32 %18)
  %20 = load %struct.st5481_ctrl*, %struct.st5481_ctrl** %4, align 8
  %21 = getelementptr inbounds %struct.st5481_ctrl, %struct.st5481_ctrl* %20, i32 0, i32 0
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %21, align 8
  %23 = call i32 @usb_free_urb(%struct.TYPE_3__* %22)
  %24 = load %struct.st5481_ctrl*, %struct.st5481_ctrl** %4, align 8
  %25 = getelementptr inbounds %struct.st5481_ctrl, %struct.st5481_ctrl* %24, i32 0, i32 0
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %25, align 8
  %26 = load %struct.st5481_intr*, %struct.st5481_intr** %3, align 8
  %27 = getelementptr inbounds %struct.st5481_intr, %struct.st5481_intr* %26, i32 0, i32 0
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %27, align 8
  %29 = call i32 @usb_kill_urb(%struct.TYPE_3__* %28)
  %30 = load %struct.st5481_intr*, %struct.st5481_intr** %3, align 8
  %31 = getelementptr inbounds %struct.st5481_intr, %struct.st5481_intr* %30, i32 0, i32 0
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %31, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @kfree(i32 %34)
  %36 = load %struct.st5481_intr*, %struct.st5481_intr** %3, align 8
  %37 = getelementptr inbounds %struct.st5481_intr, %struct.st5481_intr* %36, i32 0, i32 0
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %37, align 8
  %39 = call i32 @usb_free_urb(%struct.TYPE_3__* %38)
  %40 = load %struct.st5481_intr*, %struct.st5481_intr** %3, align 8
  %41 = getelementptr inbounds %struct.st5481_intr, %struct.st5481_intr* %40, i32 0, i32 0
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %41, align 8
  ret void
}

declare dso_local i32 @DBG(i32, i8*) #1

declare dso_local i32 @usb_kill_urb(%struct.TYPE_3__*) #1

declare dso_local i32 @kfree(i32) #1

declare dso_local i32 @usb_free_urb(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
